fix caoruse on mobile

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_carousel.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_carousel.sass
@@ -1,169 +1,87 @@
 .carousel-box
-    background: url(../../../images/components/banners/defult-back.png) no-repeat
-    background-size: cover
-    padding: 20px
-    overflow: hidden
-
-
-
-    .swiper-container-carousel 
-      width: 100%
-      padding-bottom: 30px
-      border-radius: 15px
-      overflow: hidden
-      @include breakpoint(tablet, up)
+    .swiper-container-carousel
+        width: 100%
+        padding-bottom: 30px
+        overflow: hidden
+    @include breakpoint(tablet, up)
         padding-bottom: 0
 
-    .swiper-container-carousel .swiper-slide 
-        background-position: center
-        background-size: cover
-        width: 80%
-        height: 200px
-        border-radius: 15px
+    .swiper-container-carousel .swiper-slide
+        width: 85vw
+        height: 180px
         position: relative
-        @include breakpoint(tablet, up)
-            height: 470px
+        @include breakpoint(mobile-large, up)
+            height: 100%
+            width: 60vw
+    .swiper-button-next
+        right: 130px
+    .swiper-button-prev
+        left: 130px
+    .swiper-button-next, .swiper-button-prev
+        display: none
+        color: $white
+        @include breakpoint(desktop, up)
+            display: block
+    .swiper-pagination-bullet-active
+        background: $white
 
-  
-.carousel 
-    
-
-    &__slidefront
+.slide
+    background-size: cover
+    padding: 16px 10px 20px
+    border-radius: 10px
+    position: relative
+    height: 0
+    padding-top: 56%
+    position: relative
+    &:hover
+        &::after
+            opacity: 0
+    &:after
+        position: absolute
+        content: ''
+        top: 0
+        left: 0
+        right: 0
+        bottom: 0
+        z-index: 1
+        background: $black
+        transition: .3s opacity ease
+        opacity: 0.2
+    &__content
+        z-index: 2
         display: flex
-        flex: 1
-        -webkit-flex: 1
-        position: absolute 
-        z-index: 10
-        left: 0
-        top: 0
-        padding: 10px
-        width: 80%
-        height: 100%
+        position: relative
         flex-direction: column
-        border-radius: 15px
-        cursor: pointer
-        @include breakpoint(tablet, up)
-            width: 65%
-            padding: 15px
-        &:hover + .carousel__slideback
-            opacity: 1
-        &:hover .carousel__slidefooter  .accordion__vidicon-active
-            opacity: 1
-        &:hover .carousel__slidefooter  .accordion__vidicon
-            opacity: 0
-
-    &__slideback
-        position: absolute 
-        z-index: 9
-        left: 0
-        top: 0
-        width: 100%
-        height: 100%
-        border-radius: 15px
-        object-fit: cover
-        opacity: .9
-        -webkit-transition: opacity 800ms linear
-        -moz-transition: opacity 800ms linear
-        -o-transition: opacity 800ms linear
-        -ms-transition: opacity 800ms linear
-        transition: opacity 800ms linear
-        &:hover 
-            opacity: 1
-        &:hover + .carousel__slidefront .carousel__slidefooter  .accordion__vidicon-active
-            opacity: 1
-        &:hover + .carousel__slidefront .carousel__slidefooter  .accordion__vidicon
-            opacity: 0
-
-    &__slidefooter
+        justify-content: space-between
+        position: absolute
+        top: 10px
+        left: 10px
+        padding-right: 10px
+    @include breakpoint(desktop, up)
+    &__head-img
+        @extend .article-promo__head-img
+    &__name
+        @extend .article-promo__head-title
+        color: $gold
+    &__title
+        color: $white
+        font-size: 26px
+        @include breakpoint(desktop, up)
+            margin-top: 26px
+            width: 60%
+    &__play
+        font-size: 12px
+        text-transform: uppercase
         display: flex
         align-items: center
-        margin-top: 20px
-        @include breakpoint(tablet, up)
-            margin-top: 50px
-  
-.carousel .article__writerphoto
-    width: 25px
-    height: 25px
-    @include breakpoint(tablet, up)
-        width: 50px
-        height: 50px
-
-
-.carousel  .article__writername
-    font-size: 10px
-    font-weight: bold
-    letter-spacing: 2px
-    @include breakpoint(tablet, up)
-        font-size: 12px
         letter-spacing: 2.4px
-
-.carousel .article__slidetit
-    font-size: 26px
-    font-weight: 300
-    -webkit-line-clamp: 2 /* number of lines to show */
-
-    @include breakpoint(tablet, up)
-        font-size: 52px
-        -webkit-line-clamp: 3 /* number of lines to show */
-
-.carousel .article__time 
-    font-size: 12px!important
-    font-weight: medium 
-    margin-right: 10px
-    letter-spacing: 2.4px
-    
-
-.carousel  .accordion__vid
-    width: 30px
-    height: 30px
-    left: 120px
-    -webkit-transition: opacity 800ms linear
-    -moz-transition: opacity 800ms linear
-    -o-transition: opacity 800ms linear
-    -ms-transition: opacity 800ms linear
-    transition: opacity 800ms linear
-    @include breakpoint(tablet, up)
-        width: 53px
-        height: 53px
-        left: 130px
-
-
-.swiper-container-carousel .swiper-pagination
-    visibility: visible
-    bottom: 0
-    @include breakpoint(tablet, up)
-        visibility: hidden
-
-.swiper-container-carousel .swiper-pagination-bullet
-    background: $white
-    opacity: 1
-
-.swiper-container-carousel .swiper-pagination-bullet-active
-    background: $gold
-
-.swiper-container-carousel .swiper-button-next, .swiper-container-carousel .swiper-button-prev
-    width: 100px
-    outline: none
-    display: none
-    -webkit-transition: opacity 300ms linear
-    -moz-transition: opacity 300ms linear
-    -o-transition: opacity 300ms linear
-    -ms-transition: opacity 300ms linear
-    transition: opacity 300ms linear
-    @include breakpoint(tablet, up)
-       display: flex
-       opacity: 0
-       
-       &:hover
-           opacity: 1
-
-.swiper-container-carousel .swiper-button-next
-    right: 0px
-
-.swiper-container-carousel .swiper-button-prev
-    left: 0px
-
-.swiper-container-carousel .swiper-button-next:after, .swiper-container-carousel .swiper-button-prev:after
-    color: $white
-    font-size: 80px
-
+        position: absolute
+        bottom: 20px
+        z-index: 2
+        svg
+            margin-left: 10px
+            path
+                transition: .3s all ease
+        &:hover
+            .triangle
+                fill: $white
