--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
@@ -71,7 +71,7 @@
         display: flex
         justify-content: left
     &__btn
-        margin-right: 10px
+        margin-right: 16px
         font-size: 10px
         padding: 0 .2rem
         min-width: 135px
